--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,12 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,900");
 @import url("font-awesome.min.css");
 
-/*
-	Aerial by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-*/
-
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
 pre, a, abbr, acronym, address, big, cite,
@@ -215,7 +209,6 @@ input, select, textarea {
 	/* Set your background with this */
 
 		background: #348cb2 url("images/bg1.png") bottom left;
-		background-repeat: repeat-x;
 		height: 100%;
 		left: 0;
 		opacity: 1;
@@ -288,7 +281,7 @@ input, select, textarea {
 	}
 
 	#bg {
-		background-size: 2250px auto;
+		background-size: contain;
 		width: 6750px;
 	}
 
@@ -792,7 +785,7 @@ input, select, textarea {
 		}
 
 		#bg {
-			background-size: 1500px auto;
+			background-size: contain;
 			width: 4500px;
 		} }
 
@@ -874,7 +867,7 @@ input, select, textarea {
 		}
 
 		#bg {
-			background-size: 750px auto;
+			background-size: contain;
 			width: 2250px;
 		} }
 
@@ -960,7 +953,7 @@ input, select, textarea {
 		}
 
 		#bg {
-			background-size: 300px auto;
+			background-size: contain;
 			width: 900px;
 		}
 
@@ -1058,7 +1051,7 @@ input, select, textarea {
 		}
 
 		#bg {
-			background-size: 412.5px auto;
+			background-size: contain;
 			width: 1237.5px;
 		}
 
