--- a/blog/assets/css/main.css
+++ b/blog/assets/css/main.css
@@ -269,7 +269,7 @@ input, select, textarea {
 	code {
 		background: rgba(144, 144, 144, 0.075);
 		border-radius: 4px;
-		border: solid 1px #c9c9c9;
+		/*border: solid 1px #c9c9c9;*/
 		font-family: "Courier New", monospace;
 		font-size: 0.9em;
 		margin: 0 0.25em;
