--- a/blog/assets/css/main.css
+++ b/blog/assets/css/main.css
@@ -146,12 +146,24 @@ input, select, textarea {
 		transition: border-bottom-color 0.2s ease, color 0.2s ease;
 		text-decoration: none;
 		color: #585858;
+		/* color: #f2849e; */
 		border-bottom: dotted 1px rgba(88, 88, 88, 0.5);
 	}
 
 		a:hover {
 			border-bottom-color: transparent;
 			color: #f2849e !important;
+		}
+	
+	.asp {
+			-moz-transition: border-bottom-color 0.2s ease, color 0.2s ease;
+			-webkit-transition: border-bottom-color 0.2s ease, color 0.2s ease;
+			-ms-transition: border-bottom-color 0.2s ease, color 0.2s ease;
+			transition: border-bottom-color 0.2s ease, color 0.2s ease;
+			text-decoration: none;
+			/* color: #585858; */
+			color: #f2849e;
+			border-bottom: dotted 1px rgba(88, 88, 88, 0.5);
 		}
 
 	strong, b {
